# pixelnebula

./: .gitignore  .ycm_extra_conf.py  Axis.cpp  Axis.h  CMakeLists.txt  CMakeSettings.json  DoublePointStar.h  GlowSphere.cpp  GlowSphere.h  Nebula.cpp  Nebula.h  Perspective.cpp  Perspective.h  PixellationFBO.cpp  PixellationFBO.h  PointStar.cpp  PointStar.h  README.md  Renderable.h  ShaderManager.cpp  ShaderManager.h  Shaders.h  pixelnebula.cpp  utils.cpp  utils.h  vcpkg.json
shaders/: concursionPoint.frg  concursionPoint.vrt  genshadermanager.pl  glowSphere.frg  glowSphere.vrt  scanLine.frg  scanLine.vrt  simpleIndexedColor.vrt
